--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,15 +18,19 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "postcss": "^8.4.49",
     "query-string": "^9.1.1",
     "react-emoji": "^0.5.0",
     "react-router": "^7.0.1",
+    "react-router-dom": "^7.0.1",
     "react-scroll-to-bottom": "^4.2.0",
     "socket.io-client": "^4.8.1",
+    "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
